k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sean-k8s-assessment
  labels:
    name: sean-k8s-assessment
